Create LatestActivity Endpoint in Activity Log Module